# Fracture-Engine

./: .clang-format  CMakeLists.txt  HellSpace  Makefile  README.md  cmake_install.cmake  engineTODO.md
engine/: Makefile  cmake_install.cmake
include/: assetmanager.h  camera.h  engine.h  entity.h  log.h  scene.h  texture_streamer.h
src/: assetmanager.c  camera.c  engine.c  entity.c  log.c  log_internal.h  scene.c  texture_streamer.c
src/platform/: platform_win32.c  platform_win32.h  platform_win32_threading.c  platform_win32_threading.h
